# botibus

./: .dockerignore  .env.bak  .env.example  .gitignore  Dockerfile  GUIDE_DEPLOIEMENT.md  GUIDE_UTILISATEUR.md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  TUTO_KRAKEN.md  VERIFICATION_CHECKLIST.md  debug_log.txt  diagnostic_report.txt  docker-compose.yml  extract_log.py  extract_trading_log.py  gh_actions_report.txt  gh_run_log.txt  gh_runs.json  install_deps.py  jobs.json  last_error.txt  log_analysis.txt  log_summary.txt  parse_jobs.py  pg_errors.txt  plan.md  positions_analysis.txt  positions_report.txt  positions_utf8.txt  pyproject.toml  quick_check.py  requirements.txt  start_trading_app.bat  start_trading_app.ps1  status_report.txt  verification_output.txt
.agent/workflows/: deploy.md  diagnostics.md
.github/workflows/: reveal_secret.yml  trading_bot.yml
notebooks/: README.md
scripts/: README.md  check_gh_actions.py  check_positions.py  check_status.py  debug_connection.py  deep_analysis.py  diagnose_dashboard.py  find_user_trade.py  format_diag.py  full_diagnostic.py  get_top_cryptos.py  gh_actions_trade.py  live_trade.py  migrate_fee_columns.py  repair_env_auto.py  reset_session.py  reset_to_clean_slate.py  run_backtest.py  show_diag.py  test_all_pairs.py  train_model.py  verify_dashboard_changes.py  verify_kraken.py  verify_optimization.py  verify_reset.py
tests/: README.md  debug_storage_repro.py  test_fee_calculator.py  test_performance_analyzer.py  test_risk_manager.py  test_strategy_orchestrator.py  verify_arbitrage.py  verify_dashboard_logic.py
(+24 files in other folders)
