[project]
name = "tradingllm"
version = "0.1.0"
description = "Crypto Trading Bot with Self-Learning capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0.0",
    "websocket-client>=1.6.0",
    "aiohttp>=3.9.0",
    "duckdb>=0.9.0",
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "redis>=5.0.0",
    "pandas-ta>=0.3.14b",
    "numpy>=1.26.0",
    "numba>=0.58.0",
    "torch>=2.1.0",
    "stable-baselines3>=2.2.0",
    "gymnasium>=0.29.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "optuna>=3.4.0",
    "ray[tune]>=2.8.0",
    "vectorbt>=0.26.0",
    "python-telegram-bot>=20.0",
    "streamlit>=1.29.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "typer>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"
